@@ -2,17 +2,17 @@
 /*
  * Gallery - a web based photo album viewer and editor
  * Copyright (C) 2000-2006 Bharat Mediratta
- * 
+ *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation; either version 2 of the License, or (at
  * your option) any later version.
- * 
+ *
  * This program is distributed in the hope that it will be useful, but
  * WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  * General Public License for more details.
- * 
+ *
  * You should have received a copy of the GNU General Public License
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston, MA  02110-1301, USA.
@@ -47,11 +47,11 @@ $phpnuke = isset($GLOBALS['nukeurl']) ? true : false;
 
 if ($postnuke ||
     $phpnuke ||
-    !strcmp($op, "modload") || 
-    !strcmp($mop, "modload") || 
-    isset($option) || 
+    !strcmp($op, "modload") ||
+    !strcmp($mop, "modload") ||
+    isset($option) ||
     isset($name)) {
-	/* 
+	/*
 	 * Change this variable if your Gallery module has a different
 	 * name in the Nuke or phpBB2 modules directory.
 	 */
@@ -60,14 +60,14 @@ if ($postnuke ||
 		$GALLERY_MODULENAME = $name;
 		define ('GALLERY_URL',"modules/$GALLERY_MODULENAME");
 	}
-	
+
 	if (isset($option)) {
 		$GALLERY_MODULENAME = $option;
 		$mamboDir = getcwd();
 		$GALLERY_EMBEDDED_INSIDE = 'mambo';
 		$GALLERY_EMBEDDED_INSIDE_TYPE = 'mambo';
 
-		if (isset($GLOBALS['_VERSION']->PRODUCT) && 
+		if (isset($GLOBALS['_VERSION']->PRODUCT) &&
 		  $GLOBALS['_VERSION']->PRODUCT == 'Joomla!') {
 		    $GALLERY_EMBEDDED_INSIDE = 'joomla';
 		    $GALLERY_EMBEDDED_INSIDE_TYPE = 'joomla';
@@ -105,27 +105,13 @@ if ($postnuke ||
 	 * array.
 	 */
 	$safe_to_include = array(
-		"add_comment.php",
-		       "add_photos.php",
-		       "add_photos_frame.php",
 		       "admin-page.php",
-		       "administer_startpage.php",
-		       "album_permissions.php",
 		       "albums.php",
 		       "block-random.php",
 		       "captionator.php",
-		       "copy_photo.php",
 		       "create_user.php",
-		       "delete_album.php",
-		       "delete_photo.php",
 		       "delete_user.php",
-		       "do_command.php",
-		       "download.php",
 		       "ecard_form.php",
-		       "edit_appearance.php",
-		       "edit_caption.php",
-		       "edit_field.php",
-		       "edit_thumb.php",
 		       "edit_watermark.php",
 		       "gallery_remote.php",
 		       "gallery_remote2.php",
@@ -133,33 +119,49 @@ if ($postnuke ||
 		       "help/metadataOnUpload.php",
 		       "highlight_photo.php",
 		       "imagemap.php",
-		       "lib/colorpicker.php",
 		       "login.php",
 		       "manage_users.php",
 		       "modify_user.php",
-		       "move_album.php",
-		       "move_photo.php",
 		       "multi_create_user.php",
-		       "photo_owner.php",
 		       "poll_properties.php",
 		       "poll_results.php",
-		'popups/recreate_captions.php',
+		       'popups/add_comment.php',
+        'popups/add_photos.php',
+        'popups/add_photos_frame.php',
+        'popups/administer_startpage.php',
+        'popups/album_permissions.php',
+        'popups/colorpicker.php',
+        'popups/copy_photo.php',
+        'popups/delete_album.php',
+        'popups/delete_photo.php',
+        'popups/download.php',
+        'popups/edit_appearance.php',
+        'popups/edit_caption.php',
+        'popups/edit_field.php',
+        'popups/edit_thumb.php',
+        'popups/do_command.php',
+        'popups/move_album.php',
+        'popups/move_photo.php',
+        'popups/photo_owner.php',
+        'popups/rearrange.php',
+        'popups/rebuild_thumbs.php',
+        'popups/recreate_captions.php',
+        'popups/rename_album.php',
+        'popups/reset_votes.php',
+        'popups/resize_photo.php',
+        'popups/rotate_photo.php',
+        'popups/sort_album.php',
+        'popups/view_photo_properties.php',
 		       "progress_uploading.php",
 		       "publish_xp.php",
 		       "publish_xp_docs.php",
-		       "rearrange.php",
 		       "register.php",
-		       "rename_album.php",
-		       "reset_votes.php",
-		       "resize_photo.php",
-		       "rotate_photo.php",
 		       "rss.php",
 		       "save_photos.php",
 		       "search.php",
 		       "slideshow.php",
 		       "slideshow_high.php",
 		       "slideshow_low.php",
-		       "sort_album.php",
 		       "stats-wizard.php",
 		       "stamp_preview.php",
 		       "stats.php",
@@ -172,14 +174,13 @@ if ($postnuke ||
 		       "view_album.php",
 		       "view_comments.php",
 		       "view_photo.php",
-		       "view_photo_properties.php",
 		       "watermark_album.php",
-		       );
-	
+    );
+
 	if (!in_array($include, $safe_to_include)) {
 	    $include = htmlentities($include);
-	    print sprintf(gTranslate('core', "Security error!  The file you tried to include is not on the <b>approved file list</b>.  To include this file you must edit %s's index.php and add <b>%s</b> to the <i>\$safe_to_include</i> array"), 
-			    'Gallery', $include);
+	    printf ("Security error!  The file you tried to include is not on the <b>approved file list</b>.  To include this file you must edit Gallery's index.php and add <b>%s</b> to the <i>\$safe_to_include</i> array",
+			    $include);
 	    exit;
 	}
 	include(dirname(__FILE__) . "/$include");
