@@ -1,3 +1,14 @@
+2006-07-10 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j79-UNSTABLE
+
+ * Fix: Translateable errormessage in index.php was showed before langinit.
+   Thanks to Kai.
+
+ * Fix: Adjust $safe_to_include array to popups/
+
+ * Fix: Wrong use of makeGalleryUrl insted of makeAlbumUrl in view_comments.php
+
+ * Make docs link in startpage to open in _blank
+
 2006-07-09 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j78-UNSTABLE
 
  * Fix: Path to upgrade_album.php was wrong in init.php
